--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,7 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+body {
+  background-color: #f8f9fa;
+  padding-bottom: 50px;
+}
